frontend/config/11-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: tekton-hub
  labels:
    app: nodejs
spec:
  selector:
    app: nodejs
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30004
  type: NodePort
