frontend/config/12-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: tekton-hub
  labels:
    app: nodejs
spec:
  selector:
    app: nodejs
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
