frontend/config/12-frontend-route.yaml
---
apiVersion: v1
kind: Route
metadata:
  name: frontend
spec: 
  to:
    kind: Service
    name: frontend
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
