frontend/config/13-frontend-route.yaml
---
apiVersion: v1
kind: Route
metadata:
  name: ui
  namespace: tekton-hub
spec: 
  to:
    kind: Service
    name: ui
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
